FIX: Use correct background color for search results in dark mode (#135)
closes #135

--- a/layouts/main/styles/utilities.css
+++ b/layouts/main/styles/utilities.css
@@ -1,6 +1,7 @@
 /* Shadows on Scroll */
 /* https://lea.verou.me/blog/2012/04/background-attachment-local/ */
 .scroll-shadow {
+
   background: linear-gradient(to right, white 30%, rgb(255 255 255 / 0%)),
     linear-gradient(to right, rgb(255 255 255 / 0%), white 70%) 0 100%,
     radial-gradient(
@@ -19,6 +20,11 @@
   background-size:       40px 100%, 40px 100%, 14px 100%, 14px 100%;
   background-position:   0 0, 100%, 0 0, 100%;
   background-attachment: local, local, scroll, scroll;
+
+  @media (prefers-color-scheme: dark) {
+    background: var(--off-black);
+  }
+
 }
 
 .visually-hidden {
