--- a/pages/Search/Search.css
+++ b/pages/Search/Search.css
@@ -136,11 +136,23 @@ h2 {
   }
 
   & thead tr:last-child {
+
     box-shadow: 0px 5px 5px -5px rgb(0 0 0 / 50%);
+
+    @media (prefers-color-scheme: dark) {
+      box-shadow: 0px 5px 5px -5px rgb(255 255 255 / 50%);
+    }
+
   }
 
   & thead tr:last-child th {
+
     border-block-end: 1px solid black;
+
+    @media (prefers-color-scheme: dark) {
+      border-block-end: 1px solid white;
+    }
+
   }
 
 }
